Refactoring and optimization